--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-
 spring.datasource.url=jdbc:mysql://localhost:3306/DiarySystem
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
 
 apiKey.openWeatherMap=7cd60a28abc5294eb6aa559e9bc20d8f
