add user backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 apiKey.openWeatherMap=7cd60a28abc5294eb6aa559e9bc20d8f
