--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,5 +62,8 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.34",
     "babel-plugin-inline-react-svg": "^2.0.2"
-  }
+  },
+  
+    "proxy": "http://localhost:8080"
+  
 }
