--- a/chatbot_flask/app/requirements.txt
+++ b/chatbot_flask/app/requirements.txt
@@ -6,4 +6,4 @@ mxnet
 transformers
 sentencepiece
 kobert_transformers
-'git+https://github.com/SKTBrain/KoBERT.git#egg=kobert_tokenizer&subdirectory=kobert_hf'
+# 'git+https://github.com/SKTBrain/KoBERT.git#egg=kobert_tokenizer&subdirectory=kobert_hf'
