--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,9 @@
     "@types/styled-components": "^5.1.34",
     "babel-plugin-inline-react-svg": "^2.0.2"
   },
-  "proxy": "http://localhost:8080"
-  
+  "proxy": "http://localhost:8080",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
